--- a/client/app/common/navbar/navbar.html
+++ b/client/app/common/navbar/navbar.html
@@ -1,8 +1,22 @@
-<nav class="navbar">
-  <div class="logo">
-    <h1><a ui-sref="home">{{ $ctrl.name }}</a></h1>
-  </div>
-  <div class="nav-links">
-    <span><a ui-sref="about">about</a></span>
+<nav class="navbar navbar-dark bg-dark navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">{{ $ctrl.name }}</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" ui-sref="home">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" ui-sref="register">Register</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" ui-sref="user-list">User List</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" ui-sref="about">About</a>
+      </li>
+    </ul>
   </div>
 </nav>
