--- a/client/app/common/form/form.html
+++ b/client/app/common/form/form.html
@@ -1,3 +1,32 @@
-<div>
-  <h1>This is the {{ $ctrl.name }} common component</h1>
+<div class="row">
+  <div class="col-md-12">
+    <form name="userForm" ng-submit="$ctrl.onSubmit()" novalidate>
+      <div class="form-group">
+        <label for="userName">User name *</label>
+        <input type="text" class="form-control" name="userName"
+          ng-model="$ctrl.user.name" placeholder="Enter name" 
+          ng-class="{ 'is-invalid': userForm.userName.$touched && userForm.userName.$invalid }" required>
+        <div ng-messages="userForm.userName.$error" ng-show="userForm.userName.$touched">
+          <small class="text-danger" ng-message="required">Your name is required.</small>
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="userEmail">Email address *</label>
+        <input type="email" class="form-control" name="userEmail" 
+          ng-model="$ctrl.user.email" placeholder="Enter email" 
+          ng-class="{ 'is-invalid': userForm.userEmail.$touched && userForm.userEmail.$invalid }" required>
+        <div ng-messages="userForm.userEmail.$error" ng-show="userForm.userEmail.$touched">
+          <small class="text-danger" ng-message="required">Your email is required.</small>
+          <small class="text-danger" ng-message="email">Your email is not valid.</small>
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="userPhone">Phone</label>
+        <input type="tel" class="form-control" name="userPhone" 
+        ng-model="$ctrl.user.phone" placeholder="Phone">
+      </div>
+      <button type="submit" class="btn btn-primary" ng-disabled="!userForm.$valid">Submit</button>
+      <small class="form-text text-muted">* Required field.</small>
+    </form>
+  </div>
 </div>
